--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=Matrix
+sonar.projectKey=Matrix11
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=Matrix
+sonar.projectName=Matrix11
 sonar.projectVersion=1.1
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
