--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
-sonar.projectKey=MyWebApp
-sonar.projectBaseDir=./MyWebApp
-sonar.projectName=MyWebApp
-sonar.projectVersion=1.0
-sonar.sources=./src/main/java
-sonar.language=java
-##to avoid this exception Caused by: org.tmatesoft.svn.core.SVNAuthenticationException: svn: E170001
-sonar.scm.disabled=True
-sonar.sourceEncoding=UTF-8
+# must be unique in a given SonarQube instance
+sonar.projectKey=Matrix1
+# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
+sonar.projectName=Matrix1
+sonar.projectVersion=1.1
+ 
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# This property is optional if sonar.modules is set. 
+sonar.sources=src/main/java
 
 sonar.java.binaries=build/classes/java/main
 
