--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,9 @@ uploadArchives {
         maven {
             credentials {
                 username "myMavenRepo"
-                password "pwd"
+                password "abidou14dj"
             }
-            url "https://mymavenrepo.com/repo/9tAqbuclrr1O2vznTfr7/"
+            url "https://mymavenrepo.com/repo/0zopVEcdph5cHLeKHZEF/"
         }
     }
 }
